--- a/src/app.module.css
+++ b/src/app.module.css
@@ -1,72 +1,31 @@
-.container {
-	text-align: center;
-	max-width: 950px;
-	margin: 0 auto;
+* {
+	font-size: 22px;
+  line-height: 100%;
 }
 
-.buttons-container {
-	display: flex;
-	justify-content: center;
-	gap: 10px;
+.calculator {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
-.button {
-	padding: 0.5em 0.75em;
-	background-color: hsl(var(--accent-color-hue), var(--accent-color-saturation), 92%);
-	font-size: 18px;
-	border: none;
-	transition: background-color 0.15s ease;
+.display {
+	border: 1px solid black;
+	border-radius: 10px;
+  height: 60px;
+  padding: 0 10px;
+  align-items: center;
 }
 
-.button:hover {
-	background-color: hsl(var(--accent-color-hue), var(--accent-color-saturation), 87%);
-}
-
-.button:disabled {
-	background-color: var(--disabled-color);
-}
-
-.steps-content {
-	margin-bottom: 30px;
-	min-height: 100px;
-	border: 2px solid hsl(var(--accent-color-hue), var(--accent-color-saturation), 92%);
-	border-radius: 15px;
-	padding: 15px 20px;
-}
-
-.steps-list {
-	list-style: none;
-	margin: 0;
-	margin-bottom: 30px;
-	padding: 0;
-	display: flex;
-	justify-content: space-between;
-	gap: 15px;
-}
-
-.steps-item {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	flex: 1 1 0px;
-	font-size: 0.75rem;
-}
-
-.steps-item-button {
+button {
 	cursor: pointer;
-	border-radius: 50%;
-	padding: 0.75rem 1rem;
-	background: #cccccc;
-	border: none;
-	margin-bottom: 0.25rem;
+	width: 40px;
+	height: 40px;
+
+	margin: 0 3px;
 }
 
-.steps-item.active .steps-item-button,
-.steps-item.done .steps-item-button {
-	background: hsl(var(--accent-color-hue), var(--accent-color-saturation), 92%);
-}
-
-.steps-item.active,
-.steps-item.active .steps-item-button {
-	font-weight: bold;
+div {
+	margin: 10px 0;
 }
